--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -78,3 +78,15 @@ li a:hover {
     text-decoration: underline;
     color: #eee;
 }
+
+.scheduleGroupExpansionItem {
+    text-align: center;
+}
+
+.scheduleItemButton {
+    float: right;
+}
+
+.deactivateButton {
+    float: right;
+}
