--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -272,3 +272,11 @@ h3 {
     padding: 5px;
     margin: 5px;
 }
+
+.studentViewDiv {
+    background-color: black;
+    color: whitesmoke;
+    opacity: .95;
+    border: solid 1px white;
+    width: 1135px;
+}
